--- a/PizzaClient/src/views/CreateAccountView.form
+++ b/PizzaClient/src/views/CreateAccountView.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -26,7 +26,7 @@
                       <Component id="submitButton" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Component id="firstNameField" alignment="1" max="32767" attributes="0"/>
-                  <Component id="emailField" max="32767" attributes="0"/>
+                  <Component id="userNameField" max="32767" attributes="0"/>
                   <Component id="lastNameField" alignment="0" max="32767" attributes="0"/>
                   <Component id="passwordField" max="32767" attributes="0"/>
                   <Group type="102" attributes="0">
@@ -64,7 +64,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="emailLabel" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="emailField" min="-2" max="-2" attributes="0"/>
+              <Component id="userNameField" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="passwordLabel" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -98,6 +98,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Submit"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="submitButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="cancelButton">
       <Properties>
@@ -117,7 +120,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="lastNameField">
     </Component>
-    <Component class="javax.swing.JTextField" name="emailField">
+    <Component class="javax.swing.JTextField" name="userNameField">
     </Component>
     <Component class="javax.swing.JLabel" name="lastNameLabel">
       <Properties>
